# perfectconfig

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  python-publish.yml
src/perfectconfig/: __init__.py  exceptions.py  store.py  types.py
tests/: __init__.py  mocks.py  test_store.py
